dev_ws/log/build_2020-12-04_10-44-58/py_pubsub/stderr.log
  File "/home/caesar/Desktop/ROS2/dev_ws/install/py_pubsub/lib/python3.6/site-packages/py_pubsub/subscriber_member_function.py", line 1
    import rclpyfrom rclpy.node import Node
                         ^
SyntaxError: invalid syntax

